navbar responsive issue on mobile is fixed  -part 2

--- a/src/App.css
+++ b/src/App.css
@@ -457,11 +457,7 @@ body {
   margin-top: -90px;
 }
 
-#project {
-  /* transform: rotateX(0deg) scale(1); */
-  /* transition: transform .5s linear; */
 
-}
 
 #projecwt:hover {
   transform: rotateX(40deg) scale(0.9);
